--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="flex.css"></link>
+    <link rel="stylesheet" href="flex.css">
     <title>Document</title>
 </head>
 <body>
@@ -11,15 +11,13 @@
     <header>
         <nav role="navigation">
             <ul>
-              <li><a href="#">One</a></li>
-              <li><a href="#">Two</a>
+              <li><a href="#"><img src=""></a>
                 <ul class="dropdown">
                   <li><a href="#">Sub-1</a></li>
                   <li><a href="#">Sub-2</a></li>
                   <li><a href="#">Sub-3</a></li>
                 </ul>
               </li>
-              <li><a href="#">Three</a></li>
             </ul>
           </nav>
         <marquee behavior="scroll" direction="left" scrollamount="20">
