--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
     <header>
         <nav role="navigation">
             <ul>
-              <li><a href="#"><img src=""></a>
+              <li><a href="#"><img src="trion_homepage_images/Trion_logo.png" width="80rem" alt="aeradsf"></a></li>
+                <li><a><img src="/trion_homepage_images/menu.png" class="test" width="80rem" alt="r"></a>
                 <ul class="dropdown">
                   <li><a href="#">Sub-1</a></li>
                   <li><a href="#">Sub-2</a></li>
