New gradient background and new changes

--- a/index.html
+++ b/index.html
@@ -11,12 +11,14 @@
     <header>
         <nav role="navigation">
             <ul>
-              <li><a href="#"><img src="trion_homepage_images/Trion_logo.png" width="80rem" alt="aeradsf"></a></li>
-                <li><a><img src="/trion_homepage_images/menu.png" class="test" width="80rem" alt="r"></a>
-                <ul class="dropdown">
-                  <li><a href="#">Sub-1</a></li>
-                  <li><a href="#">Sub-2</a></li>
-                  <li><a href="#">Sub-3</a></li>
+              <li><a href="#"><img src="trion_homepage_images/Trion_logo.png" class="home_button" width="55rem" alt="aeradsf"></a></li>
+                <li><a><img src="/trion_homepage_images/menu.png" class="hamburger" width="60rem" alt="r"></a>
+                <ul>
+                  <li><a href="#">Home</a></li>
+                  <li><a href="#">Models</a></li>
+                  <li><a href="#">About Us</a></li>
+                  <li><a href="#">Merch</a></li>
+                  <li><a href="#">Accessibility</a></li>
                 </ul>
               </li>
             </ul>
@@ -35,7 +37,7 @@
     </header>
     
     <footer>
-
+        <p>This is a test</p>
     </footer>
 </body>
 </html>
