--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
               <li><a href="#"><img src="trion_homepage_images/Trion_logo.png" class="home_button" width="55rem" alt="aeradsf"></a></li>
                 <li><a><img src="/trion_homepage_images/menu.png" class="hamburger" width="60rem" alt="r"></a>
                 <ul>
-                  <li><a href="#">Home</a></li>
+                  <li><a href="index.html">Home</a></li>
                   <li><a href="#">Models</a></li>
                   <li><a href="#">About Us</a></li>
                   <li><a href="#">Merch</a></li>
