--- a/index.html
+++ b/index.html
@@ -23,15 +23,14 @@
               </li>
             </ul>
           </nav>
-        <section class="scroll-container">
+        <article class="scroll-container">
 
             <img src="/trion_homepage_images/7_25-Lux-Black-Nemesis_rr-crop-1024x682.png" width="45%" height alt="rear">
             <img src="/trion_homepage_images/7_25-Lux-Black-Nemesis_side-cropped2-1024x575.png" width="53.5%" alt="wheel">
             <img src="/trion_homepage_images/Nemesis_Interior_render1-1024x575.jpg" width="53.5%" alt="wheel">
             <img src="/trion_homepage_images/dup-reg-cloudy-road-1024x641.png" width="48%" alt="cloudy">
     
-
-        </section>
+        </article>
 
        
     </header>
