--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
           </div>
 
           <div class="mySlides fade">
-            <img src="/trion_homepage_images/Nemesis_Interior_render1-1024x575.jpg" style="width:100%">
+            <img src="/trion_homepage_images/Nemesis_Interior_render1-1024x575.jpg" style="width:100%"></div>
 
           <div class="mySlides fade">
             <img src="/trion_homepage_images/dup-reg-cloudy-road-1024x641.png" style="width:100%">
