--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
             <img src="/trion_homepage_images/dup-reg-cloudy-road-1024x641.png" style="width:100%">
           </div>
 
-          <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
-          <a class="next" onclick="plusSlides(1)">&#10095;</a>
+          <a class="prev" onclick="plusSlides(-1)">❮</a>
+          <a class="next" onclick="plusSlides(1)">❯</a>
           <br>
 
 
