--- a/index.html
+++ b/index.html
@@ -24,18 +24,18 @@
             </ul>
           </nav>
         <div class="slideshow-container">
-          <div class="mySlides fade">
+          <div class="mySlides fade">123
             <img src="/trion_homepage_images/7_25-Lux-Black-Nemesis_rr-crop-1024x682.png" style="width:100%">
           </div>
 
-          <div class="mySlides fade">
+          <div class="mySlides fade">12
             <img src="/trion_homepage_images/7_25-Lux-Black-Nemesis_side-cropped2-1024x575.png" style="width:100%">            <div>
           </div>
 
-          <div class="mySlides fade">
+          <div class="mySlides fade">1
             <img src="/trion_homepage_images/Nemesis_Interior_render1-1024x575.jpg" style="width:100%"></div>
 
-          <div class="mySlides fade">
+          <div class="mySlides fade">4
             <img src="/trion_homepage_images/dup-reg-cloudy-road-1024x641.png" style="width:100%">
           </div>
 
