--- a/account.html
+++ b/account.html
@@ -6,6 +6,24 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <header>
+        <nav role="navigation">
+            <ul>
+              <li><a href="#"><img src="trion_homepage_images/Trion_logo.png" class="home_button" width="55rem" alt="aeradsf"></a></li>
+                <li><a><img src="/trion_homepage_images/menu.png" class="hamburger" width="60rem" alt="r"></a>
+                <ul>
+                  <li><a href="index.html">Home</a></li>
+                  <li><a href="">Models</a></li>
+                  <li><a href="#">About Us</a></li>
+                  <li><a href="#">Merch</a></li>
+                  <li><a href="#">Account</a></li>
+                </ul>
+              </li>
+            </ul>
+          </nav>
+
+
+          
+    </header>
 </body>
 </html>
