--- a/models.html
+++ b/models.html
@@ -14,8 +14,8 @@
                 <li><a><img src="/trion_homepage_images/menu.png" class="hamburger" width="60rem" alt="r"></a>
                 <ul>
                   <li><a href="index.html">Home</a></li>
-                  <li><a href="">Models</a></li>
-                  <li><a href="#">About Us</a></li>
+                  <li><a href="models.html">Models</a></li>
+                  <li><a href="">About Us</a></li>
                   <li><a href="#">Merch</a></li>
                   <li><a href="#">Account</a></li>
                 </ul>
@@ -24,7 +24,7 @@
           </nav>
 
 
-          
+
     </header>
 </body>
 </html>
