--- a/merch.html
+++ b/merch.html
@@ -3,9 +3,25 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="flex.css">
+    <title>Merch</title>
 </head>
 <body>
-    
+    <header>
+    <nav role="navigation">
+        <ul>
+          <li><a href="#"><img src="trion_homepage_images/Trion_logo.png" class="home_button" width="55rem" alt="aeradsf"></a></li>
+            <li><a><img src="/trion_homepage_images/menu.png" class="hamburger" width="60rem" alt="r"></a>
+            <ul>
+              <li><a href="index.html">Home</a></li>
+              <li><a href="models.html">Models</a></li>
+              <li><a href="about-us.html">About Us</a></li>
+              <li><a href="merch.html">Merch</a></li>
+              <li><a href="account.html">Account</a></li>
+            </ul>
+          </li>
+        </ul>
+      </nav>
+    </header>
 </body>
 </html>
