--- a/about-us.html
+++ b/about-us.html
@@ -23,5 +23,12 @@
         </ul>
       </nav>
     </header>
+
+    <h1>
+      <p>What Sets Us Apart  </p>
+    </h1>
+    <p>Trion Supercars apart is its cutting-edge approach to blending extreme performance with advanced technology and luxury. Trion pushes the limits of innovation by offering electric and hybrid powertrains that deliver impressive speed and acceleration, rivaling traditional supercars. The brand also leads the way in automotive design, with futuristic features like a fully digital cockpit and wireless charging.</p>
+    <p>In addition to performance, Trion is committed to sustainability, using eco-friendly materials without compromising on quality. The combination of power, high-tech connectivity, and a personalized driving experience sets Trion apart, positioning it as a standout in the competitive supercar market.</p>
+    <img src="trion_homepage_images/Trion_logo.png" width="55rem" alt="aeradsf">
 </body>
 </html>
