New images added to models page with text

--- a/models.html
+++ b/models.html
@@ -23,5 +23,16 @@
         </ul>
       </nav>
     </header>
+        <article>
+            <section>
+                <img src="/trion_homepage_images/9_25_-rear-34-tilt-lit_fin-1024x575.png" width="100%" alt="cool_car">
+                <h1>Models</h1>
+                <p>Explore the definition of power in our range of supercars. The excitement awaits you.</p>
+            </section>
+            <section>
+                <img src="/trion_homepage_images/9_26-dp-coverprac_fin-1024x575.png" width="100%" alt="cool_car">
+                <p>Unbeatable power. High Performance. Cuttin-edge technology. Every Trion vehicle boasts in such characteristics. The percision and effort put into every Trion vehichle, from creating the concept to engraving the badge, will run shivers through your bones. The thrill is real.</p>
+            </section>
+        </article>
 </body>
 </html>
