--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
                 <li><a><img src="/trion_homepage_images/menu.png" class="hamburger" width="60rem" alt="r"></a>
                 <ul>
                   <li><a href="index.html">Home</a></li>
-                  <li><a href="">Models</a></li>
-                  <li><a href="#">About Us</a></li>
-                  <li><a href="#">Merch</a></li>
-                  <li><a href="#">Account</a></li>
+                  <li><a href="models.html">Models</a></li>
+                  <li><a href="about-us.html">About Us</a></li>
+                  <li><a href="merch.html">Merch</a></li>
+                  <li><a href="account.html">Account</a></li>
                 </ul>
               </li>
             </ul>
