--- a/about-us.html
+++ b/about-us.html
@@ -24,11 +24,33 @@
       </nav>
     </header>
 
+
     <h1>
       <p>What Sets Us Apart  </p>
     </h1>
-    <p>Trion Supercars apart is its cutting-edge approach to blending extreme performance with advanced technology and luxury. Trion pushes the limits of innovation by offering electric and hybrid powertrains that deliver impressive speed and acceleration, rivaling traditional supercars. The brand also leads the way in automotive design, with futuristic features like a fully digital cockpit and wireless charging.</p>
-    <p>In addition to performance, Trion is committed to sustainability, using eco-friendly materials without compromising on quality. The combination of power, high-tech connectivity, and a personalized driving experience sets Trion apart, positioning it as a standout in the competitive supercar market.</p>
+
+    <h1>
+      <p style="color: white;">What Sets Us Apart  </p>
+    </h1>
+
+    <p style="color: white;">Trion Supercars apart is its cutting-edge approach to blending extreme performance with advanced technology and luxury. Trion pushes the limits of innovation by offering electric and hybrid powertrains that deliver impressive speed and acceleration, rivaling traditional supercars. The brand also leads the way in automotive design, with futuristic features like a fully digital cockpit and wireless charging.</p>
+    
+    <p style="color: white;">In addition to performance, Trion is committed to sustainability, using eco-friendly materials without compromising on quality. The combination of power, high-tech connectivity, and a personalized driving experience sets Trion apart, positioning it as a standout in the competitive supercar market.</p>
     <img src="trion_homepage_images/Trion_logo.png" width="55rem" alt="aeradsf">
-</body>
+
+    <section>
+    <h1 style="color:white;">Richard Patterson</h1>
+
+    <p style="color: white;">Richard Patterson (Rich), CEO & CTO of Trion Supercars, realized a lifelong dream in May 2012 after 40 years in the automotive industry by founding Trion with a core team of experts.</p>
+    
+    <p style="color: white;">Rich’s passion for cars started in his Detroit childhood, and at 15, he earned a GM apprenticeship after winning a statewide drafting contest. A graduate of Mumford High School and Hall of Fame inductee, Rich began his career as a CAD designer at Modern Engineering, quickly rising to leadership roles due to his expertise in automotive interior systems.</p>
+
+    <p style="color: white;">With over two decades of experience, including contributions to Chrysler's Stow 'n Go seating system, Rich moved to the West Coast to immerse himself in design innovation. Today, he brings his vision to life with Trion Supercars, offering high-performance American-made supercars that combine style, speeds of 300 mph, and comfort, with options ranging from traditional engines to hybrid and fully electric models.</p>
+    </section>
+
+    <section>
+      <h2 style="color: white;">Accelerate into the future with Trion's Electric Power</h2>
+    </section>
+  
+  </body>
 </html>
