Models Page HTML is complete. It will need tweaking and addition of text later on.

--- a/models.html
+++ b/models.html
@@ -30,9 +30,42 @@
                 <p>Explore the definition of power in our range of supercars. The excitement awaits you.</p>
             </section>
             <section>
-                <img src="/trion_homepage_images/9_26-dp-coverprac_fin-1024x575.png" width="100%" alt="cool_car">
-                <p>Unbeatable power. High Performance. Cuttin-edge technology. Every Trion vehicle boasts in such characteristics. The percision and effort put into every Trion vehichle, from creating the concept to engraving the badge, will run shivers through your bones. The thrill is real.</p>
+                <img src="/trion_homepage_images/7_25-Lux-Black-Nemesis_fr-crop-1024x576.png" width="100%" alt="cool_car">
+                <p>Unbeatable power. High Performance. Cuttin-edge technology. Every Trion vehicle boasts in such characteristics. The percision and effort put into every Trion supercar, from creating the concept to engraving the badge, will run shivers through your bones. The thrill is real.</p>
             </section>
+            <section>
+                <h1>The Nemesis</h1>
+                <p>Power. Performance. Agility. This is what the nemisis was built for. The aerodynamics of the Nemisis give it the ability to peirce through the wind. It's power is like that of wild horses, which allows the Nemesis to beat a legion of them.</p>
+                <img src="/trion_homepage_images/9_26-dp-coverprac_fin-1024x575.png" width="100%" alt="cool_car">
+                <a href="#">Explore</a>
+            </section>
+            <section>
+                <h1>The Black Widow</h1>
+                <p>Vengeance is written in it's name. The Black Widow is not childsplay.</p>
+                <img src="/trion_homepage_images/blk-widow.avif" width="100%" alt="cool_car">
+                <a href="#">Explore</a>
+            </section>
+        </article>
+
+        <footer>
+            <section class="footer-title">
+              <p>TRION</p>
+            </section>
+            <section class="footer_content">
+              <p>CONTACT</p>
+              <p>INSERT EMAIL HERE:</p>
+              <p>________________________</p>
+              <p>Call us: #(123)456-7890</p>
+            </section>
+            <article class="footer_buttons">
+              <a href="#">ACCESSIBILITY</a>
+              <a href="#">MODELS</a>
+              <a href="#">MERCH</a>
+              <a href="#">ABOUT US</a>
+            </section>
+        </footer>
+        <article class="footer_extra">
+          <p>Created by Lukas and Jack; November 2024</p>
         </article>
 </body>
 </html>
