add new picture

--- a/about-us.html
+++ b/about-us.html
@@ -48,9 +48,10 @@
     <p style="color: white;">With over two decades of experience, including contributions to Chrysler's Stow 'n Go seating system, Rich moved to the West Coast to immerse himself in design innovation. Today, he brings his vision to life with Trion Supercars, offering high-performance American-made supercars that combine style, speeds of 300 mph, and comfort, with options ranging from traditional engines to hybrid and fully electric models.</p>
     </section>
 
-    <section>
+    <article>
       <h2 style="color: white;">Accelerate into the future with Trion's Electric Power</h2>
-    </section>
+      <img src="trion_homepage_images/trion chief operating officer.png">
+    </article>
   
   </body>
 </html>
