--- a/about-us.html
+++ b/about-us.html
@@ -39,6 +39,7 @@
     <img src="trion_homepage_images/Trion_logo.png" width="55rem" alt="aeradsf">
 
     <section>
+      <img src="trion_homepage_images/Richard Patterson CEO of TRION.png">
     <h1 style="color:white;">Richard Patterson</h1>
 
     <p style="color: white;">Richard Patterson (Rich), CEO & CTO of Trion Supercars, realized a lifelong dream in May 2012 after 40 years in the automotive industry by founding Trion with a core team of experts.</p>
@@ -51,6 +52,8 @@
     <article>
       <h2 style="color: white;">Accelerate into the future with Trion's Electric Power</h2>
       <img src="trion_homepage_images/trion chief operating officer.png">
+      <p style="color: white">Brent Johnson</p>
+      <p style="color: white;">Chief Operating Officer</p>
     </article>
   
   </body>
