about us commit

--- a/about-us.html
+++ b/about-us.html
@@ -50,11 +50,16 @@
     </section>
 
     <article>
-      <h2 style="color: white;">Accelerate into the future with Trion's Electric Power</h2>
+      <h2>Accelerate into the future with Trion's Electric Power</h2>
       <img src="trion_homepage_images/trion chief operating officer.png">
-      <p style="color: white">Brent Johnson</p>
-      <p style="color: white;">Chief Operating Officer</p>
+      <p>Brent Johnson</p>
+      <p>Chief Operating Officer</p>
     </article>
   
+    <article>
+      <img src="trion_homepage_images/Nancy Patterson.png">
+      <p>Nancy Patterson</p>
+      <p>CEA - Chief Executive Assistant</p>
+    </article>
   </body>
 </html>
