--- a/models.html
+++ b/models.html
@@ -37,7 +37,7 @@
                 <h1>The Nemesis</h1>
                 <p>Power. Performance. Agility. This is what the nemisis was built for. The aerodynamics of the Nemisis give it the ability to peirce through the wind. It's power is like that of wild horses, which allows the Nemesis to beat a legion of them.</p>
                 <img src="/trion_homepage_images/9_26-dp-coverprac_fin-1024x575.png" width="100%" alt="cool_car">
-                <a href="#">Explore</a>
+                <a href="nemesis.html">Explore</a>
             </section>
             <section>
                 <h1>The Black Widow</h1>
@@ -45,7 +45,7 @@
                 <img src="/trion_homepage_images/blk-widow.avif" width="100%" alt="cool_car">
                 <a href="#">Explore</a>
             </section>
-        </article>
+          </article>
 
         <footer>
             <section class="footer-title">
