--- a/about-us.html
+++ b/about-us.html
@@ -61,5 +61,9 @@
       <p>Nancy Patterson</p>
       <p>CEA - Chief Executive Assistant</p>
     </article>
+
+    <article>
+      
+    </article>
   </body>
 </html>
