update about us html

--- a/about-us.html
+++ b/about-us.html
@@ -63,7 +63,62 @@
     </article>
 
     <article>
-      
+      <img src="trion_homepage_images/quinton dodson vp of special vehicle operation.png">
+      <p>Quinton Dodson</p>
+      <p>VP of Special Vehicle Operations</p>
     </article>
+
+    <article>
+      <img src="trion_homepage_images/kie fair trion ppl.png">
+      <p>Kie Fair</p>
+      <p>VP of Sales / Dealer Coordination</p>
+    </article>
+
+    <article>
+      <img src="trion_homepage_images/romeo miller.png">
+      <p>Romeo Miller</p>
+      <p>Chief Brand Ambassador</p>
+    </article>
+
+    <article>
+      <img src="trion_homepage_images/warren hollier.png">
+      <p>Warren Hollier</p>
+      <p>Director of Special Programs</p>
+    </article>
+
+    <article>
+      <img src="trion_homepage_images/peter dwars.png">
+      <p>Peter Dwars</p>
+      <p>CCO, Compliance Officer</p>
+    </article>
+
+    <article>
+      <img src="trion_homepage_images/demarcus nelson.png">
+      <p>DeMarcus Nelson</p>
+      <p>VP of Business Development</p>
+    </article>
+
+
+    <footer>
+      <section class="footer-title">
+        <p>TRION</p>
+      </section>
+      <section class="footer_content">
+        <p>CONTACT</p>
+        <p>INSERT EMAIL HERE:</p>
+        <p>________________________</p>
+        <p>Call us: #(123)456-7890</p>
+      </section>
+      <article class="footer_buttons">
+        <a href="#">ACCESSIBILITY</a>
+        <a href="#">MODELS</a>
+        <a href="#">MERCH</a>
+        <a href="#">ABOUT US</a>
+      </section>
+  </footer>
+  <article class="footer_extra">
+    <p>Created by Lukas and Jack; November 2024</p>
+  </article>
+  
   </body>
 </html>
