black widow page

--- a/models.html
+++ b/models.html
@@ -43,7 +43,7 @@
                 <h1>The Black Widow</h1>
                 <p>Vengeance is written in it's name. The Black Widow is not childsplay.</p>
                 <img src="/trion_homepage_images/blk-widow.avif" width="100%" alt="cool_car">
-                <a href="#">Explore</a>
+                <a href="black-widow.html">Explore</a>
             </section>
           </article>
 
