update merch html

--- a/merch.html
+++ b/merch.html
@@ -22,6 +22,8 @@
           </li>
         </ul>
       </nav>
+      <h1 style="color: white;">Merch</h1>
+      <h1 style="color: white;">Merch</h1>
     </header>
 </body>
 </html>
