--- a/black-widow.html
+++ b/black-widow.html
@@ -29,9 +29,8 @@
                     <img src="/trion_homepage_images/blk-widow.avif" alt="black widow">
                     <p>Inhale. Accellerate. Exhale. Repeat. This breath-taking power will make you</p>
                 </section>
-                
                 <section>
-                    <img src="/trion_homepage_images/logo_blk-widow.avif" alt="black widow">
+                    <img src="/trion_homepage_images/nemesis trion car.PNG" alt="black widow">
                     <p></p>
                 </section>
                 <section>
