black widow page is complete along with nemesis page

--- a/black-widow.html
+++ b/black-widow.html
@@ -27,11 +27,11 @@
             <article>
                 <section class="hero_image">
                     <img src="/trion_homepage_images/blk-widow.avif" alt="black widow">
-                    <p>Inhale. Accellerate. Exhale. Repeat. This breath-taking power will make you</p>
+                    <p>Inhale. Accellerate. Exhale. Repeat. This breath-taking power will make your blood rush at the speed of light. The Black Widow takes electric performance beyond the human imagination. All it requires is attitude.</p>
                 </section>
                 <section>
                     <img src="/trion_homepage_images/nemesis trion car.PNG" alt="black widow">
-                    <p></p>
+                    <p>INSERT BLACK WIDOW TECH SPECSINSERT BLACK WIDOW TECH SPECSINSERT BLACK WIDOW TECH SPECSINSERT BLACK WIDOW TECH SPECSINSERT BLACK WIDOW TECH SPECSINSERT BLACK WIDOW TECH SPECSINSERT BLACK WIDOW TECH SPECSINSERT BLACK WIDOW TECH SPECSINSERT BLACK WIDOW TECH SPECSINSERT BLACK WIDOW TECH SPECSINSERT BLACK WIDOW TECH SPECS</p>
                 </section>
                 <section>
                     <img src="/trion_homepage_images/racing_blk-widow.avif" alt="black widow">
@@ -40,8 +40,8 @@
             </article>
             <article>
                 <section>
-                  <p>A world of power is at your fingertips.</p>
-                  <p>Get in touch with a Trion dealer today. <br></p>
+                  <p>A living, breathing beast of power.</p>
+                  <p>Ask your local Trion dealership about the Black Widow. <br></p>
                   <a href="#">Configure your Nemesis</a>
                 </section>
               </article>
