new page added (models configerate)

--- a/models-configurator.html
+++ b/models-configurator.html
@@ -18,7 +18,7 @@
                   <li><a href="about-us.html">About Us</a></li>
                   <li><a href="merch.html">Merch</a></li>
                   <li><a href="account.html">Account</a></li>
-                  <li><a href="account.html">Configurator</a></li>
+                  <li><a href="models-configurator.html">Configurator</a></li>
                 </ul>
               </li>
             </ul>
