--- a/about-us.html
+++ b/about-us.html
@@ -12,13 +12,14 @@
         <ul>
           <li><a href="#"><img src="trion_homepage_images/Trion_logo.png" class="home_button" width="55rem" alt="aeradsf"></a></li>
             <li><a><img src="/trion_homepage_images/menu.png" class="hamburger" width="60rem" alt="r"></a>
-            <ul>
-              <li><a href="index.html">Home</a></li>
-              <li><a href="models.html">Models</a></li>
-              <li><a href="about-us.html">About Us</a></li>
-              <li><a href="merch.html">Merch</a></li>
-              <li><a href="account.html">Account</a></li>
-            </ul>
+              <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="models.html">Models</a></li>
+                <li><a href="about-us.html">About Us</a></li>
+                <li><a href="merch.html">Merch</a></li>
+                <li><a href="account.html">Account</a></li>
+                <li><a href="models-configurator.html">Configurator</a></li>
+              </ul>
           </li>
         </ul>
       </nav>
