--- a/merch.html
+++ b/merch.html
@@ -31,28 +31,28 @@
       <img src="merch image/Hoodies_trion_merch.png">
       <h3>Hoodies.</h3>
       <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum delectus eius laborum voluptatum aspernatur. Ut, sit. Laborum cum illum aut, rerum assumenda necessitatibus corporis beatae repudiandae aliquid ab at ratione!</p>
-      <a href="#">Explore</a>
+      <a href="#" style="color: black;">Explore</a>
     </section>
 
     <section>
       <img src="merch image/Shoes_trion_merch.png">
       <h3>Shoes.</h3>
       <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum delectus eius laborum voluptatum aspernatur. Ut, sit. Laborum cum illum aut, rerum assumenda necessitatibus corporis beatae repudiandae aliquid ab at ratione!</p>
-      <a href="#">Explore</a>
+      <a href="#" style="color: black;">Explore</a>
     </section>
 
     <section>
       <img src="merch image/T-shirts_trion_merch.png">
       <h3>T-shirts.</h3>
       <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum delectus eius laborum voluptatum aspernatur. Ut, sit. Laborum cum illum aut, rerum assumenda necessitatibus corporis beatae repudiandae aliquid ab at ratione!</p>
-      <a href="#">Explore</a>
+      <a href="#" style="color: black;">Explore</a>
     </section>
 
     <section>
       <img src="merch image/Hats_trion_merch.png">
       <h3>Hats.</h3>
       <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum delectus eius laborum voluptatum aspernatur. Ut, sit. Laborum cum illum aut, rerum assumenda necessitatibus corporis beatae repudiandae aliquid ab at ratione!</p>
-      <a href="#">Explore</a>
+      <a href="#" style="color: black;">Explore</a>
     </section>
 </body>
 </html>
