all pages now have an updated working home button

--- a/models-configurator.html
+++ b/models-configurator.html
@@ -10,7 +10,7 @@
     <header>
         <nav role="navigation">
             <ul>
-              <li><a href="#"><img src="trion_homepage_images/Trion_logo.png" class="home_button" width="55rem" alt="aeradsf"></a></li>
+              <li><a href="index.html"><img src="trion_homepage_images/Trion_logo.png" class="home_button" width="55rem" alt="aeradsf"></a></li>
                 <li><a><img src="/trion_homepage_images/menu.png" class="hamburger" width="60rem" alt="r"></a>
                 <ul>
                   <li><a href="index.html">Home</a></li>
@@ -24,6 +24,14 @@
             </ul>
           </nav>
     </header>
+        <article>
+            <section>
+                <img src="/trion_homepage_images/yellow-1024x682.png">
+            </section>
+            <section>
+                <p>CONFIGURATOR CONFIGURATOR CONFIGURATOR CONFIGURATOR CONFIGURATOR CONFIGURATOR CONFIGURATOR CONFIGURATOR</p>
+            </section>
+        </article>
     <footer>
         <section class="footer-title">
           <p>TRION</p>
