--- a/account.html
+++ b/account.html
@@ -9,7 +9,7 @@
     <header>
         <nav role="navigation">
             <ul>
-              <li><a href="#"><img src="trion_homepage_images/Trion_logo.png" class="home_button" width="55rem" alt="aeradsf"></a></li>
+              <li><a href="index.html"><img src="trion_homepage_images/Trion_logo.png" class="home_button" width="55rem" alt="aeradsf"></a></li>
                 <li><a><img src="/trion_homepage_images/menu.png" class="hamburger" width="60rem" alt="r"></a>
                   <ul>
                     <li><a href="index.html">Home</a></li>
