New pages for Account, configurators (interior and exterior).

--- a/interior-black_widow.html
+++ b/interior-black_widow.html
@@ -4,17 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="flex.css">
-    <title>config-black_widow</title>
+    <title>interior-black_widow</title>
 </head>
 <body>
-    <!-- THIS ARTICLE IS EXTERIOR CONFIG-->
     <article>
         <section>
-            <img src="/trion_homepage_images/blk-widow.avif" width="100%" alt="config">
+            <img src="/trion_homepage_images/Nemesis_Interior_render3-1024x458.jpg" width="100%" alt="config">
         </section>
-        <section>
-            <img src="/trion_homepage_images/nemesis trion car.PNG" width="100%" alt="config">
-        </section>
+    </article> 
                              
 
     <footer>
