--- a/account-settings.html
+++ b/account-settings.html
@@ -26,5 +26,25 @@
 
           
     </header>
+    <footer>
+      <section class="footer-title">
+        <p>TRION</p>
+      </section>
+      <section class="footer_content">
+        <p>CONTACT</p>
+        <p>INSERT EMAIL HERE:</p>
+        <p>________________________</p>
+        <p>Call us: #(123)456-7890</p>
+      </section>
+      <article class="footer_buttons">
+        <a href="#">ACCESSIBILITY</a>
+        <a href="#">MODELS</a>
+        <a href="#">MERCH</a>
+        <a href="#">ABOUT US</a>
+      </section>
+  </footer>
+  <article class="footer_extra">
+      <p>Created by Lukas and Jack; November 2024</p>
+  </article>
 </body>
 </html>
