--- a/shirts.html
+++ b/shirts.html
@@ -33,7 +33,7 @@
 
     <section>
         <article>
-            <img src="merch image/black shirt.png">
+            <img src="merch image/T-shirts_trion_merch.png">
             <img src="merch image/white shirt.png">
             <img src="merch image/blue shirt.png">
         </article>
@@ -41,9 +41,9 @@
 
     <section>
         <article>
+            <img src="merch image/grey shirt.png">
             <img src="merch image/Orange_Nemesis.png">
-            <img src="merch image/Orange_Nemesis.png">
-            <img src="merch image/Orange_Nemesis.png">
+            <img src="merch image/black shirt.png">
         </article>
     </section>
 
