--- a/hoodies.html
+++ b/hoodies.html
@@ -23,9 +23,37 @@
               </li>
             </ul>
           </nav>
-
-
-          
     </header>
+
+    <section>
+        <p>can't see the image</p>
+        <p>can't see the image</p>
+        <img src="merch image/Shirts-hero-image.png">
+    </section>
+
+    <section>
+        <article>
+            <img src="merch image/T-shirts_trion_merch.png">
+            <img src="merch image/white shirt.png">
+            <img src="merch image/blue shirt.png">
+        </article>
+    </section>
+
+    <section>
+        <article>
+            <img src="merch image/grey shirt.png">
+            <img src="merch image/Orange_Nemesis.png">
+            <img src="merch image/black shirt.png">
+        </article>
+    </section>
+
+    <section>
+        <article>
+            <img src="merch image/big logo black shirt.png">
+            <img src="merch image/big logo grey shirt.png">
+            <img src="merch image/big logo white shirt.png">
+        </article>
+    </section>
+    
 </body>
 </html>
