--- a/account_purchase-history_merch.html
+++ b/account_purchase-history_merch.html
@@ -41,8 +41,8 @@
         <a href="#">MODELS</a>
         <a href="#">MERCH</a>
         <a href="#">ABOUT US</a>
-      </section>
-  </footer>
+      </article>
+    </footer>
   <article class="footer_extra">
       <p>Created by Lukas and Jack; November 2024</p>
   </article>
