--- a/nemesis.html
+++ b/nemesis.html
@@ -43,7 +43,7 @@
                 <section>
                   <p>A world of power is at your fingertips.</p>
                   <p>Get in touch with a Trion dealer today. <br></p>
-                  <a href="#">Configure your Nemesis</a>
+                  <a href="config-nemesis.html">Configure your Nemesis</a>
                 </section>
               </article>
 
