--- a/config-nemesis.html
+++ b/config-nemesis.html
@@ -9,9 +9,32 @@
 <body>
     <article>
         <section>
-            <img src="/trion_homepage_images/9_26-dp-coverprac_fin-1024x575.png" width="100%" alt="config">
+            <img src="/trion_homepage_images/purple trion car.jpg" width="100%" alt="config">
         </section>
-
+        <section>
+            <img src="/trion_homepage_images/blue trion car.jpg" width="100%" alt="config">
+        </section>
+        <section>
+            <img src="/trion_homepage_images/redorange trion car.jpg" width="100%" alt="config">
+        </section>
+        <section>
+            <img src="/trion_homepage_images/pink trion car.jpg" width="100%" alt="config">
+        </section>
+        <section>
+            <img src="/trion_homepage_images/green_trion_car.jpg" width="100%" alt="config">
+        </section>
+        <section>
+            <img src="/trion_homepage_images/grey_trion_car.jpg" width="100%" alt="config">
+        </section>
+        <section>
+            <img src="/trion_homepage_images/yellow_trion_car.jpg" width="100%" alt="config">
+        </section>
+        <section>
+            <img src="/trion_homepage_images/white_trion_car.jpg" width="100%" alt="config">
+        </section>
+        <section>
+            <img src="/trion_homepage_images/9_26-dp-coverprac_fin-1024x575-removebg-preview (1).png" width="100%" alt="config">
+        </section>
     <footer>
         <section class="footer-title">
           <p>TRION</p>
