new pages; new images; config images are ready; progress on config; DECISION: config will use no javascript

--- a/config-nemesis.html
+++ b/config-nemesis.html
@@ -9,6 +9,9 @@
 <body>
     <article>
         <section>
+            <img src="/trion_homepage_images/9_26-dp-coverprac_fin-1024x575-removebg-preview (1).png" width="100%" alt="config">
+        </section>  
+        <section>
             <img src="/trion_homepage_images/purple trion car.jpg" width="100%" alt="config">
         </section>
         <section>
@@ -33,8 +36,18 @@
             <img src="/trion_homepage_images/white_trion_car.jpg" width="100%" alt="config">
         </section>
         <section>
-            <img src="/trion_homepage_images/9_26-dp-coverprac_fin-1024x575-removebg-preview (1).png" width="100%" alt="config">
+            <img src="trion_homepage_images/black_trion_car.jpg" width="100%" alt="config">
         </section>
+        <section>
+            <img src="trion_homepage_images/config_logo_polished-type.jpg" width="100%" alt="config">
+        </section>
+        <section>
+            <img src="trion_homepage_images/config_logo_sunset-type.jpg" width="100%" alt="config">
+        </section>
+        <section>
+            <img src="trion_homepage_images/config_logo_true-american_style.jpg" width="100%" alt="config">
+        </section>
+        
     <footer>
         <section class="footer-title">
           <p>TRION</p>
