--- a/merch.html
+++ b/merch.html
@@ -7,53 +7,66 @@
     <title>Merch</title>
 </head>
 <body>
-    <header>
+  <header>
     <nav role="navigation">
         <ul>
           <li><a href="index.html"><img src="trion_homepage_images/Trion_logo.png" class="home_button" width="55rem" alt="aeradsf"></a></li>
-            <li><a><img src="/trion_homepage_images/menu.png" class="hamburger" width="60rem" alt="r"></a>
-              <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="models.html">Models</a></li>
-                <li><a href="about-us.html">About Us</a></li>
-                <li><a href="merch.html">Merch</a></li>
-                <li><a href="account.html">Account</a></li>
-                <li><a href="models-configurator.html">Configurator</a></li>
-              </ul>
+          <li class="dropdown"><a><img src="/trion_homepage_images/menu.png" class="hamburger" width="60rem" alt="r"></a>
+            <ul>
+              <li><a href="index.html">Home</a></li>
+              <li><a href="models.html">Models</a></li>
+              <li><a href="about-us.html">About Us</a></li>
+              <li><a href="merch.html">Merch</a></li>
+              <li><a href="account.html">Account</a></li>
+              <li><a href="models-configurator.html">Configurator</a></li>
+              <li><a href="shopping_cart.html">Cart</a></li>
+            </ul>
           </li>
         </ul>
       </nav>
-      <h1 style="color: white;">Merch</h1>
-      <h1 style="color: white;">Merch</h1>
-      <img src="merch image/shopping_cart-removebg-preview.png" width="45rem">
-    </header>
+  </header>
 
-    <section>
-      <img src="merch image/Hoodies_trion_merch.png">
+  <section id="merch-header">
+    <h1 style="color: white;">Merch</h1>
+    <img src="merch image/shopping_cart-removebg-preview.png" width="45rem">
+  </section>
+
+  <section class="merch-item">
+    <!-- <div class="merch-image"> -->
+      <img src="merch image/Hoodies_trion_merch.png" class="merch-image">
+    <!-- </div> -->
+    <div class="merch-description">
       <h3>Hoodies.</h3>
       <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum delectus eius laborum voluptatum aspernatur. Ut, sit. Laborum cum illum aut, rerum assumenda necessitatibus corporis beatae repudiandae aliquid ab at ratione!</p>
       <a href="hoodies.html" style="color: black;">Explore</a>
-    </section>
+    </div>
+  </section>
 
-    <section>
-      <img src="merch image/Shoes_trion_merch.png">
+  <section class="merch-item">
+    <img src="merch image/Shoes_trion_merch.png" class="merch-image">
+    <div class="merch-description">
       <h3>Shoes.</h3>
       <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum delectus eius laborum voluptatum aspernatur. Ut, sit. Laborum cum illum aut, rerum assumenda necessitatibus corporis beatae repudiandae aliquid ab at ratione!</p>
       <a href="shoes.html" style="color: black;">Explore</a>
-    </section>
+    </div>
+  </section>
 
-    <section>
-      <img src="merch image/T-shirts_trion_merch.png">
+  <section class="merch-item">
+    <img src="merch image/T-shirts_trion_merch.png" class="merch-image">
+    <div class="merch-description">
       <h3>T-shirts.</h3>
       <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum delectus eius laborum voluptatum aspernatur. Ut, sit. Laborum cum illum aut, rerum assumenda necessitatibus corporis beatae repudiandae aliquid ab at ratione!</p>
       <a href="shirts.html" style="color: black;">Explore</a>
-    </section>
+    </div>
+  </section>
 
-    <section>
-      <img src="merch image/Hats_trion_merch.png">
+  <section class="merch-item">
+    <img src="merch image/Hats_trion_merch.png" class="merch-image">
+    <div class="merch-description">
       <h3>Hats.</h3>
       <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum delectus eius laborum voluptatum aspernatur. Ut, sit. Laborum cum illum aut, rerum assumenda necessitatibus corporis beatae repudiandae aliquid ab at ratione!</p>
       <a href="hats.html" style="color: black;">Explore</a>
-    </section>
+    </div>
+  </section>
 </body>
 </html>
