--- a/shirts.html
+++ b/shirts.html
@@ -4,38 +4,80 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="flex.css">
-    <title>Document</title>
+    <title>Shirts</title>
+    <style>
+        #shirt-hero {
+            width: 100%;
+            /* height: 300px; */
+            object-fit: contain;
+        }
+
+        .shirt-row {
+            padding: 1rem;
+        }
+
+        .shirt-container {
+            display: flex;
+            gap: 1rem;
+            justify-content: center;
+            align-items: center;
+        }
+
+        .shirt-container > div {
+            width: 190px;
+            height: 250px;
+            background-color: white;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+        }
+
+        .shirt-container > div > img {
+            border: none;
+            object-fit: cover;
+        }
+    </style>
 </head>
 <body>
     <header>
         <nav role="navigation">
             <ul>
               <li><a href="index.html"><img src="trion_homepage_images/Trion_logo.png" class="home_button" width="55rem" alt="aeradsf"></a></li>
-                <li><a><img src="/trion_homepage_images/menu.png" class="hamburger" width="60rem" alt="r"></a>
-                  <ul>
-                    <li><a href="index.html">Home</a></li>
-                    <li><a href="models.html">Models</a></li>
-                    <li><a href="about-us.html">About Us</a></li>
-                    <li><a href="merch.html">Merch</a></li>
-                    <li><a href="account.html">Account</a></li>
-                    <li><a href="models-configurator.html">Configurator</a></li>
-                  </ul>
+              <li class="dropdown"><a><img src="/trion_homepage_images/menu.png" class="hamburger" width="60rem" alt="r"></a>
+                <ul>
+                  <li><a href="index.html">Home</a></li>
+                  <li><a href="models.html">Models</a></li>
+                  <li><a href="about-us.html">About Us</a></li>
+                  <li><a href="merch.html">Merch</a></li>
+                  <li><a href="account.html">Account</a></li>
+                  <li><a href="models-configurator.html">Configurator</a></li>
+                  <li><a href="shopping_cart.html">Cart</a></li>
+                </ul>
               </li>
             </ul>
           </nav>
     </header>
 
-    <section>
-        <p>can't see the image</p>
-        <p>can't see the image</p>
-        <img src="merch image/Shirts-hero-image.png">
+    <section id="merch-header">
+        <h1 style="color: white;">Merch</h1>
+        <img src="merch image/shopping_cart-removebg-preview.png" width="45rem">
     </section>
 
     <section>
-        <article>
-            <img src="merch image/T-shirts_trion_merch.png">
-            <img src="merch image/white shirt.png">
-            <img src="merch image/blue shirt.png">
+        <img src="merch image/Shirts-hero-image.png" id="shirt-hero">
+    </section>
+
+    <section class="shirt-row">
+        <article class="shirt-container">
+            <div>
+                <img src="merch image/T-shirts_trion_merch.png">
+            </div>
+            <div>
+                <img src="merch image/white shirt.png">
+            </div>
+            <div>
+                <img src="merch image/blue shirt.png">
+            </div> 
         </article>
     </section>
 
