--- a/config-nemesis.html
+++ b/config-nemesis.html
@@ -6,47 +6,25 @@
     <link rel="stylesheet" href="flex.css">
     <title>config-nemesis</title>
 </head>
-<body>
-    <article>
-        <section>
-            <img src="/trion_homepage_images/9_26-dp-coverprac_fin-1024x575-removebg-preview (1).png" width="100%" alt="config">
-        </section>  
-        <section>
-            <img src="/trion_homepage_images/purple trion car.jpg" width="100%" alt="config">
+<body class="config_controller">
+    <article class="config_option-controller">
+        <img class="image_config_controller" src="trion_homepage_images/7_25-Lux-Black-Nemesis_fr34-1024x575.jpg" width="100%" alt="config">
+        <section class="config_option">
+            <a href="nemesis_color-orange.html">PAINT JOB</a>
         </section>
-        <section>
-            <img src="/trion_homepage_images/blue trion car.jpg" width="100%" alt="config">
+        <section class="config_option">
+            <a href="nem_hubcap1.html">HUBCAPS</a>
         </section>
-        <section>
-            <img src="/trion_homepage_images/redorange trion car.jpg" width="100%" alt="config">
+        <section class="config_option">
+            <a href="nem_hubcap-polished.html">LOGO DESIGNS</a>        
         </section>
-        <section>
-            <img src="/trion_homepage_images/pink trion car.jpg" width="100%" alt="config">
+        <section class="config_option">
+            <a href="nem_tint_original.html">WINDOW TINT</a>
         </section>
-        <section>
-            <img src="/trion_homepage_images/green_trion_car.jpg" width="100%" alt="config">
+        <section class="config_option">
+            <a href="nem_headlight-caliper1.html">HEADLIGHTS AND BRAKE CALIPERS</a>
         </section>
-        <section>
-            <img src="/trion_homepage_images/grey_trion_car.jpg" width="100%" alt="config">
-        </section>
-        <section>
-            <img src="/trion_homepage_images/yellow_trion_car.jpg" width="100%" alt="config">
-        </section>
-        <section>
-            <img src="/trion_homepage_images/white_trion_car.jpg" width="100%" alt="config">
-        </section>
-        <section>
-            <img src="trion_homepage_images/black_trion_car.jpg" width="100%" alt="config">
-        </section>
-        <section>
-            <img src="trion_homepage_images/config_logo_polished-type.jpg" width="100%" alt="config">
-        </section>
-        <section>
-            <img src="trion_homepage_images/config_logo_sunset-type.jpg" width="100%" alt="config">
-        </section>
-        <section>
-            <img src="trion_homepage_images/config_logo_true-american_style.jpg" width="100%" alt="config">
-        </section>
+    </article>
         
     <footer>
         <section class="footer-title">
