Config for the car colors is complete

--- a/nemesis_color-orange.html
+++ b/nemesis_color-orange.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="flex.css">
-    <title>nemesis_paintjob</title>
+    <title>nemesis_paintjob_orange</title>
 </head>
-<body>
+<body class="background_for_config">
     <article class="next_prev-controller">
         <a href="nemesis_color-black.html">BLACK</a>
         <img src="/trion_homepage_images/9_26-dp-coverprac_fin-1024x575-removebg-preview (1).png" width="100%" alt="config">
