CHANGE APPLY CONFIRMATION PAGE (nemesis exterior colors now take you to this page upon clicking apply color)

--- a/nemesis_color-grey.html
+++ b/nemesis_color-grey.html
@@ -9,6 +9,7 @@
 <body class="background_for_config">
     <article class="next_prev-controller">
         <a href="/nemesis_color-white.html">WHITE</a>
+        <a class="equip_button_controller" href="/about-us.html">APPLY COLOR</a>
         <img src="/trion_homepage_images/grey_trion_car.jpg" width="100%" alt="config">
         <a href="nemesis_color-rose.html">ROSE</a>
     </article>
