--- a/nemesis_color-hotpink.html
+++ b/nemesis_color-hotpink.html
@@ -4,11 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="flex.css">
-    <title>nemesis_paintjob_redorange</title>
+    <title>nemesis_paintjob_hotpink</title>
 </head>
 <body class="background_for_config">
     <article class="next_prev-controller">
         <a href="nemesis_color-green.html">GREEN</a>
+        <a class="equip_button_controller" href="/about-us.html">APPLY COLOR</a>
         <img src="/trion_homepage_images/redorange trion car.jpg" width="100%" alt="config">
         <a href="nemesis_color-purple.html">PURPLE</a>
     </article>
