--- a/nemesis_color-orange.html
+++ b/nemesis_color-orange.html
@@ -9,6 +9,7 @@
 <body class="background_for_config">
     <article class="next_prev-controller">
         <a href="nemesis_color-black.html">BLACK</a>
+        <a class="equip_button_controller" href="/about-us.html">APPLY COLOR</a>
         <img src="/trion_homepage_images/9_26-dp-coverprac_fin-1024x575-removebg-preview (1).png" width="100%" alt="config">
         <a href="nemesis_color-white.html">WHITE</a>
     </article>
