--- a/nemesis_color-yellow.html
+++ b/nemesis_color-yellow.html
@@ -9,9 +9,9 @@
 <body class="background_for_config">
     <article class="next_prev-controller">
         <a href="/nemesis_color-purple.html">PURPLE</a>
-        <a class="equip_button_controller" href="/about-us.html">TEST</a>
+        <a class="equip_button_controller" href="/about-us.html">APPLY COLOR</a>
         <img src="/trion_homepage_images/yellow_trion_car.jpg" width=100% alt="config">
-        <a href="/nemesis_color-black.html">BLACK</a>
+        <a href="/nemesis_color-navy.html">NAVY</a>
     </article>
  
     <footer>
