--- a/nemesis_color-purple.html
+++ b/nemesis_color-purple.html
@@ -8,7 +8,8 @@
 </head>
 <body class="background_for_config">
     <article class="next_prev-controller">
-        <a href="nemesis_color-hotpink.html">RED ORANGE</a>
+        <a href="nemesis_color-hotpink.html">HOTPINK</a>
+        <a class="equip_button_controller" href="/about-us.html">APPLY COLOR</a>
         <img src="/trion_homepage_images/purple trion car.jpg" width="100%" alt="config">
         <a href="nemesis_color-yellow.html">YELLOW</a>
     </article>
