--- a/shirts.html
+++ b/shirts.html
@@ -70,7 +70,7 @@
     <section class="shirt-row">
         <article class="shirt-container">
             <div>
-                <img src="merch image/T-shirts_trion_merch.png">
+                <img src="merch image/T-shirts_trion_merch - Copy.png">
             </div>
             <div>
                 <img src="merch image/white shirt.png">
