--- a/change-apply-confirmation.html
+++ b/change-apply-confirmation.html
@@ -27,8 +27,10 @@
           </nav>
     </header>
 
+    <article class="">
         <h1>CHANGE APPLIED</h1>
-        
+        <a href="config-nemesis.html">BACK TO CONFIGURATOR</a>
+    </article>
     
     <footer>
         <section class="footer-title">
