--- a/shirts.html
+++ b/shirts.html
@@ -70,7 +70,9 @@
     <section class="shirt-row">
         <article class="shirt-container">
             <div>
+                <a href="shopping_cart.html">
                 <img src="merch image/T-shirts_trion_merch - Copy.png">
+                </a>
             </div>
             <div>
                 <img src="merch image/white shirt.png">
