--- a/customize.html
+++ b/customize.html
@@ -3,29 +3,68 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="flex.css">
+    <title>customize</title>
 </head>
 <body>
+
     <header>
         <nav role="navigation">
             <ul>
               <li><a href="index.html"><img src="trion_homepage_images/Trion_logo.png" class="home_button" width="55rem" alt="aeradsf"></a></li>
-                <li><a><img src="/trion_homepage_images/menu.png" class="hamburger" width="60rem" alt="r"></a>
-                  <ul>
-                    <li><a href="index.html">Home</a></li>
-                    <li><a href="models.html">Models</a></li>
-                    <li><a href="about-us.html">About Us</a></li>
-                    <li><a href="merch.html">Merch</a></li>
-                    <li><a href="account.html">Account</a></li>
-                    <li><a href="models-configurator.html">Configurator</a></li>
-                  </ul>
+              <li class="dropdown"><a><img src="/trion_homepage_images/menu.png" class="hamburger" width="60rem" alt="r"></a>
+                <ul>
+                  <li><a href="index.html">Home</a></li>
+                  <li><a href="models.html">Models</a></li>
+                  <li><a href="about-us.html">About Us</a></li>
+                  <li><a href="merch.html">Merch</a></li>
+                  <li><a href="account.html">Account</a></li>
+                  <li><a href="models-configurator.html">Configurator</a></li>
+                  <li><a href="shopping_cart.html">Cart</a></li>
+                </ul>
               </li>
             </ul>
           </nav>
-
-
-          
     </header>
+
+    <section>
+      <img src="merch image/T-shirts_trion_merch - Copy.png">
+    </section>
+    <article>
+      <h1>Black Top Right</h1>
+      <h2>$30</h2>
+      <p>description:</p>
+      <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eligendi perspiciatis fugit expedita maxime voluptates non nemo accusamus aut quae recusandae iste provident nisi, saepe ullam voluptas maiores! Excepturi, animi debitis?</p>
+    </article>
+      <section>
+          <ul>
+            <li>size</li>
+            <li>s</li>
+            <li>ss</li>
+          </ul>
+      </section>
+
+      <section class="cart">
+        <a href="shopping_cart.html" style="color: white;">Add to Cart</a>
+      </section>
+      
+      <style>
+        .cart {
+          background-image: linear-gradient(gray, black, gray);
+          border: none;
+          color: white;
+          padding: 15px 32px;
+          text-align: center;
+          text-decoration: none;
+          display: inline-block;
+          font-size: 20%;
+          margin: 4px 2px;
+          cursor: pointer;
+        }
+
+
+      </style>
+
     <footer>
       <section class="footer-title">
         <p>TRION</p>
